@@ -25,7 +25,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -38,12 +37,12 @@ public class MemberPointServiceImpl implements MemberPointService {
     private final PointConditionRepository pointConditionRepository;
     private final ReviewImageRepository reviewImageRepository;
     private final OrderProductRepository orderProductRepository;
-
+    public static final String POINT_CONDITION_NOT_FOUND = "포인트 조건이 존재하지 않습니다.";
     // 회원 가입시
     @Override
     public void addSignUpPoint(Member member) {
         PointCondition pointCondition = pointConditionRepository.findByName("SIGN_UP")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
 
         int pointsToAdd = pointCondition.getConditionPoint();
 
@@ -61,7 +60,7 @@ public class MemberPointServiceImpl implements MemberPointService {
     // 도서구매시
     public void addPurchasePoint(Member member, OrderRequestDto orderRequest) {
         PointCondition pointCondition = pointConditionRepository.findByName("BOOK_PURCHASE")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
         BigDecimal basePercentage = pointCondition.getConditionPercentage();
 
         BigDecimal gradePercentage = switch (member.getMemberGrade().getMemberGradeName()) {
@@ -92,9 +91,9 @@ public class MemberPointServiceImpl implements MemberPointService {
     @Override
     public void addReviewPoint(Review review) {
         PointCondition reviewCondition = pointConditionRepository.findByName("REVIEW")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
         PointCondition photoReviewCondition = pointConditionRepository.findByName("PHOTO_REVIEW")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
 
         String pointConditionName;
         int pointsToAdd;
@@ -121,9 +120,9 @@ public class MemberPointServiceImpl implements MemberPointService {
     @Override
     public void updatePointForReview(Review review, boolean isPhotoAdded) {
         PointCondition photoReview = pointConditionRepository.findByName("PHOTO_ADD")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
         PointCondition photoRemove = pointConditionRepository.findByName("PHOTO_REMOVE")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
 
         if (isPhotoAdded) {
             // 사진 추가 시 포인트 지급
@@ -159,7 +158,7 @@ public class MemberPointServiceImpl implements MemberPointService {
                 .orElseThrow(() -> new MemberNotFoundException("회원이 존재하지 않습니다."));
 
         PointCondition pointCondition = pointConditionRepository.findByName(requestDto.getName())
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
 
         int pointsToAdd = requestDto.getConditionPoint();
 
@@ -201,7 +200,7 @@ public class MemberPointServiceImpl implements MemberPointService {
                         point.getUsingDate(),
                         point.getType()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 사용 가능 포인트 조회
@@ -247,7 +246,7 @@ public class MemberPointServiceImpl implements MemberPointService {
         usedPointRecord.setType("USE");
 
         PointCondition condition = pointConditionRepository.findByName("USE")
-                .orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+                .orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
         usedPointRecord.setPointCondition(condition);
 
         memberPointRepository.save(usedPointRecord);
@@ -256,7 +255,7 @@ public class MemberPointServiceImpl implements MemberPointService {
     // 반품시 포인트 지급
     @Override
     public void restorePoint(Member member, int points) {
-        PointCondition pointCondition = pointConditionRepository.findByName("RETURN").orElseThrow(() -> new PointConditionNotFoundException("포인트 조건이 존재하지 않습니다."));
+        PointCondition pointCondition = pointConditionRepository.findByName("RETURN").orElseThrow(() -> new PointConditionNotFoundException(POINT_CONDITION_NOT_FOUND));
 
         MemberPoint returnPoint = new MemberPoint();
         returnPoint.setMember(member);
